# esp-hal-ulp-test-crates

./: README.md  binutils.just  clippy.just  hp_crate.just  openocd.cfg  rust-toolchain.toml  shell.nix
counter-simple/hp-blinky/: justfile  openocd.cfg
counter-simple/hp-blinky/src/: main.rs  ulp_debug.rs
counter-simple/ulp-blinky/: justfile
counter-ulp-timer/hp-gpio-wakeup/: justfile
counter-ulp-timer/ulp-baremetal/: justfile
counter-ulp-timer/ulp-baremetal/.cargo/: config.toml
counter/hp-blinky/: .gitignore  Cargo.toml  justfile
counter/hp-blinky/.cargo/: config.toml
counter/hp-blinky/src/: counter.rs  main.rs
counter/ulp-blinky/: Cargo.toml  justfile
counter/ulp-blinky/src/: main.rs
hp-blinky/: Cargo.toml  build.rs  justfile
hp-blinky/.cargo/: config.toml
hp-blinky/src/: counter_tacho.rs  main.rs  ulp_debug.rs
hp-gpio-wakeup/: Cargo.toml  justfile
hp-gpio-wakeup/.cargo/: config.toml
hp-gpio-wakeup/src/: main.rs
interrupts/hp-gpio-wakeup/: Cargo.toml  build.rs  justfile
interrupts/hp-gpio-wakeup/src/: main.rs  ulp_debug.rs
interrupts/ulp-baremetal/: Cargo.toml  build.rs  justfile
interrupts/ulp-baremetal/src/: main.rs
testsuite/hp-test/: Cargo.toml  build.rs  justfile  lp_app.x
testsuite/hp-test/.cargo/: config.toml
testsuite/hp-test/src/: lib.rs  main.rs  ulp_debug.rs  ulp_utils.rs
testsuite/hp-test/tests/: integration.rs  simple.rs
testsuite/hp-test/tests/simple/: delays.rs
testsuite/shared/: Cargo.toml  build.rs  justfile
testsuite/shared/src/: lib.rs  main.rs
testsuite/ulp-app-main/: Cargo.toml  build.rs  justfile  ulp.ld
testsuite/ulp-app-main/.cargo/: config.toml
testsuite/ulp-app-main/src/: main.rs
ulp-baremetal/: Cargo.toml  build.rs  justfile  link.x  memory.x
ulp-baremetal/.cargo/: config.toml
ulp-baremetal/ld/: link.x
ulp-baremetal/src/: main.rs  ulp_riscv_vectors.S
ulp-blinky/: Cargo.toml  justfile
ulp-blinky/.cargo/: config.toml
ulp-blinky/src/: main.rs
ulp-esp32s2/: Cargo.toml
ulp-esp32s2/.cargo/: config.toml
