[package]
edition      = "2024"
name         = "hp-blinky"
rust-version = "1.90"
version      = "0.1.0"

[[bin]]
name = "app"
path = "./src/main.rs"
test = false
bench = false

[features]
default = [] # Setting this may cause build issues, when using the justfile. For VSCode usage, set this in settings.json.
ulp-blinky = [] # use blinky app for ulp
ulp-stompy = [] # use stompy app for ulp
esp32s3 = ["esp-metadata-generated/esp32s3", "esp-hal/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3" ]
esp32s2 = ["esp-metadata-generated/esp32s2", "esp-hal/esp32s2", "esp-bootloader-esp-idf/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2" ]
esp32c6 = ["esp-metadata-generated/esp32c6", "esp-hal/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]

[dependencies]
log = "0.4.27"
critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04"] }

[dependencies.esp-hal]
version = "1.0.0-rc.1"
features = ["unstable", "log-04"]

[build-dependencies]
esp-metadata-generated = { version = "0.3.0", features = ["build-script"] }

[patch.crates-io]
esp-hal = { path = "/home/leigh/Git/esp-hal/esp-hal" }
esp-bootloader-esp-idf = { path = "/home/leigh/Git/esp-hal/esp-bootloader-esp-idf" }
esp-backtrace = { path = "/home/leigh/Git/esp-hal/esp-backtrace" }
esp-println = { path = "/home/leigh/Git/esp-hal/esp-println" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
debug = false
strip = true
#opt-level = "s"
opt-level = 3
codegen-units = 1
lto = true

#[patch.crates-io]
#esp-hal = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
#esp-backtrace = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
#esp-println = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
#esp-bootloader-esp-idf = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
#esp-storage = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
#esp-rtos = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "devel" }
