[package]
name = "ulp-baremetal"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
path = "src/main.rs"
name = "app"
test = false
bench = false

[dependencies]
cfg-if = "1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

# LP HAL from esp-hal, needed by esp-hal-procmacros,
# so that it can conjure the peripherals passed to main()
# esp-lp-hal = { version = "0.3.0", features = [ "esp32s3" ], git = "https://github.com/esp-rs/esp-hal", rev = "6ba09ad" }
esp-lp-hal = { version = "0.3.0", features = [ "esp32s3" ], path = "/home/leigh/Git/esp-hal/esp-lp-hal"}

[features]
default = [] # Setting this may cause build issues, when using the justfile. For VSCode usage, set this in settings.json.

[profile.release]
debug = false
strip = "debuginfo"
# size is an important factor in the ULP code,  because it's easy to run out of space.
#opt-level = "s" 
opt-level = 1
codegen-units = 1 # LLVM can perform better optimizations using a single thread
# Enabling LTO breaks the weak linkage used for the ulp_irq_handler function...
# https://github.com/riscvarchive/riscv-gcc/issues/172
lto = false

#[patch.crates-io]
#esp-lp-hal = { git = "https://github.com/leighleighleigh/esp-hal.git", branch = "leighleighleigh/ulp-interrupt-handler" }
#esp-lp-hal = { path = "/home/leigh/Git/esp-hal/esp-lp-hal" }

