[package]
name = "ulp-baremetal"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
path = "src/main.rs"
name = "app"
test = false
bench = false

[dependencies]
cfg-if = "1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
esp-lp-hal = "0.3.0"
critical-section = "1.2.0"

[build-dependencies]
esp-metadata-generated = { version = "0.4.0", features = ["build-script"] }

[features]
default = [ 'gpio-interrupt' ] # Setting this may cause build issues, when using the justfile. For VSCode usage, set this in settings.json.
gpio-interrupt = []
gpio-wakeup = []
keep-awake = [] # Enter a loop of incrementing

esp32s3 = ["esp-lp-hal/esp32s3", "esp-metadata-generated/esp32s3" ]
esp32c6 = ["esp-lp-hal/esp32c6", "esp-metadata-generated/esp32c6" ]

[profile.release]
debug = false
strip = "debuginfo"
# size is an important factor in the ULP code,  because it's easy to run out of space.
opt-level = "s"
# opt-level = 1
codegen-units = 1 # LLVM can perform better optimizations using a single thread
# Enabling LTO breaks the weak linkage used for the ulp_irq_handler function...
# https://github.com/riscvarchive/riscv-gcc/issues/172
lto = true

[patch.crates-io]
#esp-lp-hal = { git = "https://github.com/leighleighleigh/esp-hal.git", rev = "d2343bf152397a0171fa95223251e69a74b89119" }
esp-lp-hal = { path = "/home/leigh/Git/esp-hal/esp-lp-hal" }
