[package]
edition      = "2024"
name         = "hp-blinky"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "app"
path = "./src/main.rs"
test = false
bench = false

[features]
default = []
#default = ['use-ulp-timer']
use-ulp-timer = [] # When enabled, the counter will be incremented off ULP timer intervals, rather a loop
esp32s3 = ["esp-metadata-generated/esp32s3", "esp-hal/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3" ]
esp32s2 = ["esp-metadata-generated/esp32s2", "esp-hal/esp32s2", "esp-bootloader-esp-idf/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2" ]
esp32c6 = ["esp-metadata-generated/esp32c6", "esp-hal/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]

[dependencies]
log = "0.4.27"
critical-section = "1.2.0"
riscv-decode = "0.2.3"

# new versions
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println"]}
esp-println = { version = "0.17.0", features = ["log-04"]}
esp-bootloader-esp-idf = { version = "0.5.0", features = ["log-04"]}
esp-hal = { version = "1.1.0-rc.0", features = ["unstable", "log-04"] }

# old versions
#esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"]}
#esp-println = { version = "0.16.1", features = ["log-04"]}
#esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04"]}
#esp-hal = { version = "1.0.0", features = ["unstable", "log-04"] }

# Upstream
#[patch.crates-io]
#esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "53d72f1b4f1c087549d8c722634d8d5755b1ac26" }
#esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "53d72f1b4f1c087549d8c722634d8d5755b1ac26" }
#esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "53d72f1b4f1c087549d8c722634d8d5755b1ac26" }
#esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "53d72f1b4f1c087549d8c722634d8d5755b1ac26" }

# Local development
[patch.crates-io]
esp-hal = { path = "/home/leigh/Git/esp-hal/esp-hal" }
esp-bootloader-esp-idf = { path = "/home/leigh/Git/esp-hal/esp-bootloader-esp-idf" }
esp-backtrace = { path = "/home/leigh/Git/esp-hal/esp-backtrace" }
esp-println = { path = "/home/leigh/Git/esp-hal/esp-println" }


[build-dependencies]
esp-metadata-generated = { version = "0.3.0", features = ["build-script"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
debug = false
strip = true
#opt-level = "s"
opt-level = 3
codegen-units = 1
lto = true
