[package]
edition      = "2024"
name         = "hp-test"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "example-esp32s3"
path = "src/main.rs"
test = false        # To make plain `cargo test` work: Disable tests for the bin, because we are only using the intergration tests
bench = false       # To make `cargo check --all-targets` work.
required-features = [ "unstable", "esp32s3", "println" ]

[lib]
name = "hil_test"
harness = false
bench = false
test = false # No tests within lib itself, allows cargo test to work.

[[test]]
name              = "integration"
harness           = false

[[test]]
name              = "simple"
harness           = false


[features]
default = ["unstable","defmt"]
unstable = ["esp-hal/unstable"]
defmt = ["dep:defmt-rtt", "embedded-test/defmt", "esp-hal/defmt"]
println = ["dep:esp-println" ]

esp32s2 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-metadata-generated/esp32s2",
    "esp-println?/esp32s2"
]
esp32s3 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-metadata-generated/esp32s3",
    "esp-println?/esp32s3"
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-metadata-generated/esp32c6",
    "esp-println?/esp32c6"
]

[dependencies]
log = "0.4.27"
critical-section = "1.2.0"
riscv-decode = "0.2.3"
esp-bootloader-esp-idf = { version = "0.5.0" }
esp-hal = { version = "1.1.0-rc.0", features = [ "unstable" ] }
esp-backtrace = { version = "0.19.0", features = [ "panic-handler", "defmt" ]}
esp-println = { version = "0.17.0", features = [ "log-04" ], optional = true }

# test-specific crates
#embassy-executor   = { version = "0.10.0", default-features = false }
embedded-hal       = "1.0.0"
defmt              = "1.0.1"
defmt-rtt          = { version = "1.0.0", optional = true }
semihosting        = { version = "0.1", features= ["stdio", "panic-handler"] }
embedded-test       = { version = "0.7.1", default-features = false, features = ["external-executor", "semihosting"] }
shared = { version = "0.2.0", path = "../shared", features = [ "defmt" ] }

[build-dependencies]
esp-metadata-generated = { version = "0.3.0", features = ["build-script"] }

# Local development patches
[patch.crates-io]
esp-hal = { path = "/home/leigh/Git/esp-hal/esp-hal" }
esp-bootloader-esp-idf = { path = "/home/leigh/Git/esp-hal/esp-bootloader-esp-idf" }
esp-backtrace = { path = "/home/leigh/Git/esp-hal/esp-backtrace" }
esp-println = { path = "/home/leigh/Git/esp-hal/esp-println" }

# https://doc.rust-lang.org/cargo/reference/profiles.html#test
# Test and bench profiles inherit from dev and release respectively.
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = "z"
overflow-checks  = true

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
lto              = false # LTO (thin or fat) miscompiles some tests on RISC-V
overflow-checks  = true
